[package]
name = "discord-wasm-viewer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "generator"
path = "src/main.rs"

[dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# WASM Frontend dependencies
wasm-bindgen = "0.2"
lazy_static = "1.4"
chrono = "0.4"

# CLI Backend dependencies (Only compiled for the generator, ignored for WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1.0"
chrono = "0.4"
flate2 = "1.1.9"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link Time Optimization
strip = true         # Strip symbols to reduce WASM size
codegen-units = 1
panic = "abort"
